textwire/testdata/bad/duplicate-slot/index.tw
@component("user", { name: "Anna" })
    @slot("content")<p>Content 1</p>@end
    @slot("content")<p>Content 2</p>@end
@end